
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int Vdp2 ;



Vdp2 * Vdp2RestoreRegs(int line, Vdp2* lines) {
   return line > 270 ? ((void*)0) : lines + line;
}
